--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -1,3 +1,17 @@
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+
 .table-container {
     margin: 0 auto; 
     max-width: 800px; 
@@ -86,3 +100,27 @@
 .navbar .nav-links li a.active:hover::after {
     width: 0; 
 }
+
+.container {
+    position: relative;
+    top: 14px;
+    display: flex;
+    flex-direction: column; /* расположение элементов в столбик */
+  }
+  
+  .left-column {
+    display: flex;
+    flex-direction: row; /* расположение элементов в столбик */
+  }
+  
+  .right-column {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+  
+  /* Пример стилей для компонентов */
+  .bar-component, .chart-component, .simple-line-component {
+    width: 100%;
+    /* Дополнительные стили при необходимости */
+  }
