--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -50,6 +50,7 @@ code {
     align-items: center;
     background-color: #ad0b77;
     padding: 10px 20px;
+    flex-direction: row;
 }
 
 .logo {
@@ -62,7 +63,7 @@ code {
     font-size: 16px;
     color: #ffffff;
     position: relative;
-    left: 35%;
+    left: 30%;
     right: 35%;
 }
 
@@ -84,7 +85,7 @@ code {
 .navbar .nav-links li a.active {
     color: rgb(43, 41, 42);
     font-weight: bold;
-    position: relative; /* Устанавливаем позицию для родительского элемента */
+    position: relative; 
 }
 
 .navbar .nav-links li a.active::after {
@@ -105,12 +106,12 @@ code {
     position: relative;
     top: 14px;
     display: flex;
-    flex-direction: column; /* расположение элементов в столбик */
+    flex-direction: column; 
   }
   
   .left-column {
     display: flex;
-    flex-direction: row; /* расположение элементов в столбик */
+    flex-direction: row; 
   }
   
   .right-column {
@@ -119,8 +120,40 @@ code {
     flex-direction: column;
   }
   
-  /* Пример стилей для компонентов */
+
   .bar-component, .chart-component, .simple-line-component {
     width: 100%;
-    /* Дополнительные стили при необходимости */
   }
+
+  .dropdown-menu {
+    position: relative;
+    display: inline-block;
+    margin: 0 10px;
+}
+
+.dropdown-trigger {
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown-menu:hover .dropdown-content {
+    display: block;
+}
