--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -1,10 +1,22 @@
-body {
+.dark-theme body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: black;
+    position: relative;
+}
+
+
+
+.light body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    
   }
   
 code {
@@ -29,6 +41,10 @@ code {
   th, td {
     padding: 12px; 
     text-align: left; 
+  }
+
+  .dark-theme td{
+    background: white;
   }
   
   th {
