--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -7,7 +7,13 @@
     position: relative;
 }
 
+.dark-theme .dark{
+    display: none;
+}
 
+.light .low{
+    display: none;
+}
 
 .light body {
     margin: 0;
@@ -18,6 +24,12 @@
     -moz-osx-font-smoothing: grayscale;
     
   }
+
+.flex-center {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
   
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
